<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.guitar.GuitarView">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/guitarMakeAdd"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_guitarMake"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="1sp"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@+id/guitarMake"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:spinnerMode="dropdown"
                    android:textSize="30sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/guitarModelAdd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_guitarModel"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/valueTitle"
                    android:layout_width="188dp"
                    android:layout_height="26dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/valueTitle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.017" />


                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/guitarImage"
                        android:layout_width="190dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="200dp" />

                    <NumberPicker
                        android:id="@+id/valuePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/valueSubtitle"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.973"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.333"
                        tools:ignore="UnknownId" />

                </RelativeLayout>


                <!-- <NumberPicker
                    android:id="@+id/yearPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/valueSubtitle"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:baselineAligned="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.973"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.333" />-->

                <ProgressBar
                    android:id="@+id/valueBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="349dp"
                    android:layout_height="14dp"
                    android:layout_alignEnd="@+id/valueSubtitle"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:indeterminate="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7" />


                <TextView
                    android:id="@+id/valueAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.888"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.781" />

                <TextView
                    android:id="@+id/dateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/hint_guitarDate"
                    android:inputType="number"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.888"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.781" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/btn_date_picker"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorAccent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/button_addDate"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/chooseImage"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorAccent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/button_addImage"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/guitarLocation"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="145dp"
                        android:background="@color/colorAccent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_location"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="95dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="28dp"
                    android:text="00.000000"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guitarLocation" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="92dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:text="00.000000"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lat" />


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView2"
                    android:layout_width="363dp"
                    android:layout_height="162dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guitarLocation" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>